--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gameetest",
-  "version": "1.0.0",
+  "name": "eaststonians",
+  "version": "0.7.2",
   "description": "A choice-based game about 13th Century Estonia, where the people were at war with conquerors.",
   "main": "script.js",
   "scripts": {
